--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,17 @@
   margin: 0 auto;
   padding: 20px 10px;
   max-width: 1200px;
-  
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+@media (max-width: 1050px) {
+  .App {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
