--- a/src/components/requestView/requestView.css
+++ b/src/components/requestView/requestView.css
@@ -1,8 +1,8 @@
-.request {
+.request-view {
   margin-top: 20px;
   padding: 10px;
   border: solid #ccc 1px;
   border-radius: 2px;
-  max-width: 500px;
+  max-width: 516px;
   width: 100%;
 }
